# mandelbrot

./: .gitignore  CMakeLists.txt
src/: main.cpp
