project(mandelbrot)
set(CMAKE_CXX_STANDARD 20)

if(WIN32)
    include_directories(${CMAKE_SOURCE_DIR}/include)
    add_executable(${PROJECT_NAME} WIN32 src/main.cpp)
    target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/lib/SDL2.lib ${CMAKE_SOURCE_DIR}/lib/SDL2main.lib)
    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Mandelbrot")
endif()

if(APPLE)
    find_package(SDL2 REQUIRED)
    include_directories(${SDL2_INCLUDE_DIRS})
    add_executable(${PROJECT_NAME} MACOSX_BUNDLE src/main.cpp)
    target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Mandelbrot")
endif()